--- a/PokemonGame.Main/Views/Home/Index.cshtml
+++ b/PokemonGame.Main/Views/Home/Index.cshtml
@@ -26,23 +26,21 @@
                 <form action="@Url.Action("Login","Home")" method="post">
                     @Html.AntiForgeryToken()
                     @Html.LabelFor(m => m.Email, new { @class = " d-flex justify-content-center" })
-                    <div class="mt-4 d-flex justify-content-center">
+                    <div class="mb-4 d-flex justify-content-center">
                         @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
 
                     </div>
                     @Html.LabelFor(m => m.Password, new { @class = " d-flex justify-content-center" })
-                    <div class="mt-4 mb-4 d-flex justify-content-center">
+                    <div class="mb-4 d-flex justify-content-center">
                         @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                     </div>
                     <div class=text-center>
                         <button type="submit" class="btn btn-submit mb-1 w-50 fw-bold">Log in</button>
                     </div>
-                    <div class="text-center link-color"><a href="#">Forgot password?</a></div>
                     <hr class="hr" />
                 </form>
-
 
                 <div class="text-center">
                     <p>New user?</p>
@@ -62,17 +60,24 @@
                                 {
                                     @Html.AntiForgeryToken()
                                 <div class="justify-content-center">
+                                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
                                     @Html.LabelFor(m => m.Name, new { @class = " d-flex justify-content-center" })
                                     <div class="mt-4 d-flex justify-content-center">
-                                        @Html.TextBoxFor(m => m.Name, new { @class = "form-control text-center" })
+                                        @Html.TextBoxFor(m => m.Name, htmlAttributes: new { @class = "form-control text-center" })
+                                        @Html.ValidationMessageFor(m => m.Name, "", new { @class = "text-danger" })
                                     </div>
-                                    @Html.LabelFor(m => m.Email, new { @class = " d-flex justify-content-center" })
+
+                                    @Html.LabelFor(m => m.Email, htmlAttributes: new { @class = " d-flex justify-content-center" })
                                     <div class="mb-4 d-flex justify-content-center">
                                         @Html.TextBoxFor(m => m.Email, new { @class = "form-control text-center" })
+                                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                                     </div>
-                                    @Html.LabelFor(m => m.Password, new { @class = " d-flex justify-content-center" })
+
+                                    @Html.LabelFor(m => m.Password, htmlAttributes: new { @class = " d-flex justify-content-center" })
                                     <div class="mb-4 d-flex justify-content-center">
                                         @Html.PasswordFor(m => m.Password, new { @class = "form-control text-center" })
+                                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                                     </div>
                                     <div class="text-center">
                                         <button class="btn btn-submit" type="submit">Registrar</button>
