--- a/PokemonGame.Main/Views/Trainer/_TeamPartial.cshtml
+++ b/PokemonGame.Main/Views/Trainer/_TeamPartial.cshtml
@@ -1,16 +1,8 @@
 ﻿@model PokemonGame.Data.Team
-<h1>Your team</h1>
+
+<h1>@Model.User.Name's Team</h1>
 <div class="">
     <table class="table table-striped table-borderless">
-        <thead class="table-dark">
-            <tr>
-                <th scope="col">Pokemon #1</th>
-                <th scope="col">Pokemon #2</th>
-                <th scope="col">Pokemon #3</th>
-                <th scope="col">Pokemon #4</th>
-            </tr>
-        </thead>
-
         <tbody>
             <tr>
                 <td>
@@ -31,8 +23,21 @@
             </tr>
         </tbody>
     </table>
+    @if (!ViewData.ModelState.IsValid)
+    {
+        <div class="alert alert-danger text-center">
+            @foreach (var error in ViewData.ModelState.Values.SelectMany(v => v.Errors))
+            {
+                <p>@error.ErrorMessage</p>
+                @Html.ActionLink("Create a team","CreateTeam","Trainer", new { @class = "btn btn-submit" })
+            }
+        </div>
+    }
 </div>
 <div class="col">
-    <button class="btn btn-submit mb-3">Edit team</button>
-    <button class="btn btn-submit mb-3">Nurse Request</button>
+    @if (ViewData.ModelState.IsValid)
+    {
+        @Html.ActionLink("Delete team", "DeleteTeam", new { id = Model.TeamID}, new { @class = "btn btn-submit mb-3" })
+        <button class="btn btn-submit mb-3">Nurse Request</button>
+    }
 </div>
