--- a/PokemonGame.Main/Views/Trainer/_TeamPartial.cshtml
+++ b/PokemonGame.Main/Views/Trainer/_TeamPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PokemonGame.Data.Team
 
-<h1>@Model.User.Name's Team</h1>
+<h2> Team</h2>
 <div class="">
     <table class="table table-striped table-borderless">
         <tbody>
@@ -38,6 +38,5 @@
     @if (ViewData.ModelState.IsValid)
     {
         @Html.ActionLink("Delete team", "DeleteTeam", new { id = Model.TeamID}, new { @class = "btn btn-submit mb-3" })
-        <button class="btn btn-submit mb-3">Nurse Request</button>
     }
 </div>
